--- a/my-app/package.json
+++ b/my-app/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^5.9.8",
     "expo": "^50.0.14",
     "expo-status-bar": "~1.11.1",
+    "inquirer": "^7.3.3",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "~2.14.0",
